# weather-competition

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  settings.py
data/: city_list.json
email/: send_email.py
scheduled_email/: quickstart.py  send_email.py
tests/: constants.py  test_weather_competition.py
weather_competition/: app.py  scheduled_job.py  score.py  utils.py
