[tool.poetry]
name = "weather-competition"
version = "0.1.0"
description = "A weather scoring and comparison tool for a list of cities"
authors = ["Logan Yang <logancyang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pytz = "^2020.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
