[tool.poetry]
name = "weather-competition"
version = "0.1.0"
description = "A weather scoring and comparison tool for a list of cities"
authors = ["Logan Yang <logancyang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pytz = "^2020.1"
python-dotenv = "^0.14.0"
apscheduler = "^3.6.3"
boto3 = "^1.14.42"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
